--- a/src/components/Homes/home.css
+++ b/src/components/Homes/home.css
@@ -1,7 +1,7 @@
 .container{
     max-width: 1300px;
     width: 90%;
-    margin: 168px auto;
+    margin: 168px auto 20px;
     display: grid;
     gap: 20px;
     row-gap: 50px;
